--- a/lib/stm32/f1/Makefile
+++ b/lib/stm32/f1/Makefile
@@ -27,7 +27,8 @@ TGT_CFLAGS	= -Os \
 		  -Wredundant-decls -Wmissing-prototypes -Wstrict-prototypes \
 		  -Wundef -Wshadow \
 		  -I../../../include -fno-common \
-		  -mcpu=cortex-m3 $(FP_FLAGS) -mthumb -Wstrict-prototypes \
+			-march=rv32imac -mabi=ilp32 -mcmodel=medany \
+		  -Wstrict-prototypes \
 		  -ffunction-sections -fdata-sections -MD -DSTM32F1
 TGT_CFLAGS      += $(DEBUG_FLAGS)
 TGT_CFLAGS	+= $(STANDARD_FLAGS)
